--- a/infotest.yaml
+++ b/infotest.yaml
@@ -1,107 +1,105 @@
 teams:
   - league: test
-    name: X
+    name: a
     fullname:
-    byeWeeks: []
-    homeGameWeeks: []
-    awayGameWeeks: [ 1, 2, 3, 4 ]
+    byeWeeks: [ 4 ]
+    fixedHomeGameWeeks: [ 1 ]
+    fixedAwayGameWeeks: []
+    noHomeGymWeeks: [ 3, 5 ]
     notes:
     coaches:
   - league: test
     name: b
     fullname:
     byeWeeks: []
-    homeGameWeeks: [ 1, 3 ]
-    awayGameWeeks: []
-    notes: tricity double weeks 1 and 2
+    fixedHomeGameWeeks: [ 1 ]
+    fixedAwayGameWeeks: []
+    noHomeGymWeeks: []
+    notes:
     coaches:
   - league: test
     name: c
     fullname:
     byeWeeks: []
-    homeGameWeeks: [ 2, 4 ]
-    awayGameWeeks: []
-    notes: bye requested
+    fixedHomeGameWeeks: [ ]
+    fixedAwayGameWeeks: [ 1, 2 ]
+    noHomeGymWeeks: []
+    notes:
     coaches:
   - league: test
     name: d
     fullname: black
     byeWeeks: []
-    homeGameWeeks: [ 1, 3 ]
-    awayGameWeeks: []
-    notes: jyo off weeks 5 and 9, jyo double weeks 8 and 10
-    coaches: alvin lin, newton wong
+    fixedHomeGameWeeks: []
+    fixedAwayGameWeeks: [ ]
+    noHomeGymWeeks: []
+    notes:
+    coaches:
   - league: test
     name: e
     fullname: red
     byeWeeks: []
-    homeGameWeeks: [ 2, 4 ]
-    awayGameWeeks: [ ]
-    notes: jyo off weeks 5 and 9, jyo double weeks 8 and 10, g4:j2 and b6:j1 need to play in the same gym
-    coaches: phil lee, joseph wong
+    fixedHomeGameWeeks: []
+    fixedAwayGameWeeks: [ ]
+    noHomeGymWeeks: []
+    notes:
+    coaches:
   - league: test
     name: f
     fullname:
     byeWeeks: []
-    homeGameWeeks: [ 1, 3 ]
-    awayGameWeeks: []
+    fixedHomeGameWeeks: []
+    fixedAwayGameWeeks: []
+    noHomeGymWeeks: []
     notes:
     coaches:
   - league: test
     name: g
     fullname:
     byeWeeks: []
-    homeGameWeeks: [ 2, 4 ]
-    awayGameWeeks: []
+    fixedHomeGameWeeks: []
+    fixedAwayGameWeeks: []
+    noHomeGymWeeks: []
     notes:
     coaches:
   - league: test
     name: h
     fullname:
     byeWeeks: []
-    homeGameWeeks: []
-    awayGameWeeks: []
+    fixedHomeGameWeeks: []
+    fixedAwayGameWeeks: []
+    noHomeGymWeeks: []
     notes:
     coaches:
 
-weeks:
+gameCapacity:
   - league: test
     week: 1
     maximumGames: 4
-    gamesAvailable: 4
   - league: test
     week: 2
     maximumGames: 4
-    gamesAvailable: 4
   - league: test
     week: 3
     maximumGames: 4
-    gamesAvailable: 4
   - league: test
     week: 4
     maximumGames: 4
-    gamesAvailable: 4
   - league: test
     week: 5
-    maximumGames: 3
-    gamesAvailable: 3
+    maximumGames: 4
   - league: test
     week: 6
     maximumGames: 4
-    gamesAvailable: 4
   - league: test
     week: 7
     maximumGames: 4
-    gamesAvailable: 4
   - league: test
     week: 8
     maximumGames: 4
-    gamesAvailable: 4
   - league: test
     week: 9
-    maximumGames: 3
-    gamesAvailable: 3
+    maximumGames: 4
   - league: test
     week: 10
     maximumGames: 4
-    gamesAvailable: 4
